--- a/assets/locales/fr_FR.json
+++ b/assets/locales/fr_FR.json
@@ -314,7 +314,7 @@
     "None": "Aucun(e)",
     "Allow self-registration": "Auto-inscription autoris\u00e9e",
     "After approval": "Apr\u00e8s approbation",
-    "Allow self-registration as a trainer": "Autoriser l'auto-inscription en tant que cr\u00e9ateur de cours",
+    "Allow self-registration as a trainer": "Autoriser l'auto-inscription en tant que formateur",
     "Update Chamilo": "Update Chamilo",
     "Install Chamilo": "Install Chamilo",
     "Step 6 - Last check before install": "\u00c9tape 6 - Derni\u00e8re v\u00e9rification avant installation",
@@ -436,7 +436,7 @@
     "Learn more about Chamilo and its use, official references links": "Apprenez-en plus sur Chamilo, son utilisation et ses diverses r\u00e9f\u00e9rences",
     "Version check enabled": "Fonctionnalit\u00e9 de v\u00e9rification de version activ\u00e9e",
     "Version check": "V\u00e9rification de la version",
-    "Hide campus from public platforms list": "Masquer le campus de la liste public des plates-formes",
+    "Hide campus from public platforms list": "Masquer le campus de la liste publique des plates-formes",
     "Assignment created": "Assignment created",
     "Create assignment": "Cr\u00e9er",
     "Assignment updated": "Assignment updated",
@@ -614,5 +614,16 @@
     "Notification to remind the event": "Notification de rappel de l'\u00e9v\u00e8nement",
     "Before": "Avant le",
     "We respect your privacy!": "Nous respectons vos donn\u00e9es personnelles\u202f! Cette page unit tous les aspects correspondants aux donn\u00e9es personnelles que nous pourrions conserver \u00e0 votre sujet, comment nous les traitons et ce que vous nous avez autoris\u00e9 de faire avec, ainsi que qui nous sommes, dans un effort de correspondance \u00e0 la majorit\u00e9 des lois de protection des donn\u00e9es disponibles et applicables. Merci de lire l'information \u00e0 votre disposition avec attention. Si vous avez des questions, merci de localiser nos donn\u00e9es de contact ci-dessous et de nous y envoyer vos questions.",
-    "Go to your newly created portal.": "Aller directement sur votre nouveau portail."
+    "Go to your newly created portal.": "Aller directement sur votre nouveau portail.",
+    "Email Settings": "Email Settings",
+    "The DSN fully includes all parameters needed to connect to the mail service. You can learn more at %s. Here are a few examples of supported DSN syntaxes: %s": "The DSN fully includes all parameters needed to connect to the mail service. You can learn more at {0}. Here are a few examples of supported DSN syntaxes: {1}",
+    "Mail DSN": "Mail DSN",
+    "The e-mail address from which e-mails will be sent when the platform sends an e-mail, also used as 'reply-to' header. We recommend using a 'no-reply' e-mail address here, to avoid excessive filling of an e-mail box. The support e-mail address defined in the Platform section should be used to contact you, but replying to automatic notifications should not be encouraged.": "The e-mail address from which e-mails will be sent when the platform sends an e-mail, also used as 'reply-to' header. We recommend using a 'no-reply' e-mail address here, to avoid excessive filling of an e-mail box. The support e-mail address defined in the Platform section should be used to contact you, but replying to automatic notifications should not be encouraged.",
+    "Mail: 'From' address": "Mail: 'From' address",
+    "The name that appears as the sender (next to the From e-mail address) when the platform sends an e-mail.": "The name that appears as the sender (next to the From e-mail address) when the platform sends an e-mail.",
+    "Mail: 'From' name": "Mail: 'From' name",
+    "Installer data is missing.": "Installer data is missing.",
+    "Test email sent successfully": "Test email sent successfully",
+    "Test email failed: ": "Test email failed: ",
+    "Error during test email: ": "Error during test email: "
 }
