--- a/assets/locales/ar.json
+++ b/assets/locales/ar.json
@@ -611,5 +611,16 @@
     "Days": "Days",
     "Before": "\u0642\u0628\u0644",
     "We respect your privacy!": "\u0646\u062d\u0646 \u0646\u062d\u062a\u0631\u0645 \u062e\u0635\u0648\u0635\u064a\u062a\u0643\u060c \u0647\u0630\u0647 \u0627\u0644\u0635\u062d\u0641\u0629 \u062a\u062c\u0645\u0639 \u0643\u0627\u0641\u0629 \u062c\u0648\u0627\u0646\u0628 \u0628\u064a\u0627\u0646\u0627\u062a\u0643 \u0627\u0644\u0634\u062e\u0635\u064a\u0629 \u0627\u0644\u062a\u064a \u0646\u062d\u062a\u0641\u0638 \u0628\u0647\u0627\u060c \u0648\u0643\u064a\u0641 \u0646\u062a\u0639\u0627\u0645\u0644 \u0628\u0647\u0627 \u0648\u0645\u0627 \u0627\u0644\u0635\u0644\u0627\u062d\u064a\u0627\u062a \u0627\u0644\u062a\u064a \u062a\u0645\u0646\u062d\u0647\u0627 \u0644\u0646\u0627. \u0648\u0644\u063a\u0631\u0636 \u0627\u0644\u0627\u0645\u062a\u062b\u0627\u0644 \u0645\u0639 \u0642\u0648\u0627\u0646\u064a\u0646 \u0627\u0644\u062e\u0635\u0648\u0635\u064a\u0629\u060c \u0641\u0646\u0631\u062c\u0648 \u0627\u0646 \u062a\u0642\u0631\u0623 \u0647\u0630\u0647 \u0627\u0644\u0645\u0639\u0644\u0648\u0645\u0627\u062a \u0628\u062d\u0630\u0631\u060c \u0648\u0627\u0630\u0627 \u0643\u0627\u0646 \u0644\u062f\u064a\u0643 \u0627\u064a \u0627\u0633\u062a\u0641\u0633\u0627\u0631 \u0641\u0627\u0646 \u062a\u0641\u0627\u0635\u064a\u0644 \u0627\u0644\u0627\u062a\u0635\u0627\u0644 \u0645\u0648\u062c\u0648\u062f\u0629 \u0627\u062f\u0646\u0627\u0647 \u0644\u0644\u062d\u0635\u0648\u0644 \u0639\u0644\u0649 \u062a\u0641\u0627\u0635\u064a\u0644 \u0627\u0643\u062b\u0631",
-    "Go to your newly created portal.": "Go to your newly created portal."
+    "Go to your newly created portal.": "Go to your newly created portal.",
+    "Email Settings": "Email Settings",
+    "The DSN fully includes all parameters needed to connect to the mail service. You can learn more at %s. Here are a few examples of supported DSN syntaxes: %s": "The DSN fully includes all parameters needed to connect to the mail service. You can learn more at {0}. Here are a few examples of supported DSN syntaxes: {1}",
+    "Mail DSN": "Mail DSN",
+    "The e-mail address from which e-mails will be sent when the platform sends an e-mail, also used as 'reply-to' header. We recommend using a 'no-reply' e-mail address here, to avoid excessive filling of an e-mail box. The support e-mail address defined in the Platform section should be used to contact you, but replying to automatic notifications should not be encouraged.": "The e-mail address from which e-mails will be sent when the platform sends an e-mail, also used as 'reply-to' header. We recommend using a 'no-reply' e-mail address here, to avoid excessive filling of an e-mail box. The support e-mail address defined in the Platform section should be used to contact you, but replying to automatic notifications should not be encouraged.",
+    "Mail: 'From' address": "Mail: 'From' address",
+    "The name that appears as the sender (next to the From e-mail address) when the platform sends an e-mail.": "The name that appears as the sender (next to the From e-mail address) when the platform sends an e-mail.",
+    "Mail: 'From' name": "Mail: 'From' name",
+    "Installer data is missing.": "Installer data is missing.",
+    "Test email sent successfully": "Test email sent successfully",
+    "Test email failed: ": "Test email failed: ",
+    "Error during test email: ": "Error during test email: "
 }
