--- a/assets/locales/mk_MK.json
+++ b/assets/locales/mk_MK.json
@@ -454,5 +454,16 @@
     "Revoke Acceptance": "Revoke Acceptance",
     "Minutes": "\u041c\u0438\u043d\u0443\u0442\u0438",
     "Days": "Days",
-    "Go to your newly created portal.": "\u041e\u0434\u0435\u0442\u0435 \u043d\u0430 \u0412\u0430\u0448\u0438\u043e\u0442 \u043d\u043e\u0432\u043e\u043a\u0440\u0435\u0438\u0440\u0430\u043d \u043f\u043e\u0440\u0442\u0430\u043b."
+    "Go to your newly created portal.": "\u041e\u0434\u0435\u0442\u0435 \u043d\u0430 \u0412\u0430\u0448\u0438\u043e\u0442 \u043d\u043e\u0432\u043e\u043a\u0440\u0435\u0438\u0440\u0430\u043d \u043f\u043e\u0440\u0442\u0430\u043b.",
+    "Email Settings": "Email Settings",
+    "The DSN fully includes all parameters needed to connect to the mail service. You can learn more at %s. Here are a few examples of supported DSN syntaxes: %s": "The DSN fully includes all parameters needed to connect to the mail service. You can learn more at {0}. Here are a few examples of supported DSN syntaxes: {1}",
+    "Mail DSN": "Mail DSN",
+    "The e-mail address from which e-mails will be sent when the platform sends an e-mail, also used as 'reply-to' header. We recommend using a 'no-reply' e-mail address here, to avoid excessive filling of an e-mail box. The support e-mail address defined in the Platform section should be used to contact you, but replying to automatic notifications should not be encouraged.": "The e-mail address from which e-mails will be sent when the platform sends an e-mail, also used as 'reply-to' header. We recommend using a 'no-reply' e-mail address here, to avoid excessive filling of an e-mail box. The support e-mail address defined in the Platform section should be used to contact you, but replying to automatic notifications should not be encouraged.",
+    "Mail: 'From' address": "Mail: 'From' address",
+    "The name that appears as the sender (next to the From e-mail address) when the platform sends an e-mail.": "The name that appears as the sender (next to the From e-mail address) when the platform sends an e-mail.",
+    "Mail: 'From' name": "Mail: 'From' name",
+    "Installer data is missing.": "Installer data is missing.",
+    "Test email sent successfully": "Test email sent successfully",
+    "Test email failed: ": "Test email failed: ",
+    "Error during test email: ": "Error during test email: "
 }
