--- a/assets/locales/nl.json
+++ b/assets/locales/nl.json
@@ -614,5 +614,16 @@
     "Notification to remind the event": "Melding om het evenement te herinneren",
     "Before": "Voordat",
     "We respect your privacy!": "Wij respecteren uw privacy!",
-    "Go to your newly created portal.": "Ga naar uw ge\u00efnstalleerde portaal."
+    "Go to your newly created portal.": "Ga naar uw ge\u00efnstalleerde portaal.",
+    "Email Settings": "Email Settings",
+    "The DSN fully includes all parameters needed to connect to the mail service. You can learn more at %s. Here are a few examples of supported DSN syntaxes: %s": "The DSN fully includes all parameters needed to connect to the mail service. You can learn more at {0}. Here are a few examples of supported DSN syntaxes: {1}",
+    "Mail DSN": "Mail DSN",
+    "The e-mail address from which e-mails will be sent when the platform sends an e-mail, also used as 'reply-to' header. We recommend using a 'no-reply' e-mail address here, to avoid excessive filling of an e-mail box. The support e-mail address defined in the Platform section should be used to contact you, but replying to automatic notifications should not be encouraged.": "The e-mail address from which e-mails will be sent when the platform sends an e-mail, also used as 'reply-to' header. We recommend using a 'no-reply' e-mail address here, to avoid excessive filling of an e-mail box. The support e-mail address defined in the Platform section should be used to contact you, but replying to automatic notifications should not be encouraged.",
+    "Mail: 'From' address": "Mail: 'From' address",
+    "The name that appears as the sender (next to the From e-mail address) when the platform sends an e-mail.": "The name that appears as the sender (next to the From e-mail address) when the platform sends an e-mail.",
+    "Mail: 'From' name": "Mail: 'From' name",
+    "Installer data is missing.": "Installer data is missing.",
+    "Test email sent successfully": "Test email sent successfully",
+    "Test email failed: ": "Test email failed: ",
+    "Error during test email: ": "Error during test email: "
 }
