--- a/assets/locales/sl_SI.json
+++ b/assets/locales/sl_SI.json
@@ -612,5 +612,16 @@
     "Notification to remind the event": "Obvestilo v opomin na dogodek",
     "Before": "Pred",
     "We respect your privacy!": "Mi spo\u0161tujemo va\u0161o zasebnost! Ta stran vklju\u010duje vse vidike, ki se ti\u010dejo osebnih podatkov, ki jih morebiti zbiramo in se ti\u010dejo va\u0161e osebe, kako ravnamo z njimi, za kak\u0161no njih obravnavo ste pooblastili, kdo smo,... vse, da bi zagotovili skladnost z vsemi zakoni, ki se ti\u010dejo varstva osebnih podatkov. Prosimo, da to informacijo pazljivo preberete, in \u010de imate kakr\u0161nokoli vpra\u0161anje, posredujte kontaktne podatke preko spodnje forme in povpra\u0161ajte o temi, ki vas zanima.",
-    "Go to your newly created portal.": "Pojdi na novo ustvarjen portal."
+    "Go to your newly created portal.": "Pojdi na novo ustvarjen portal.",
+    "Email Settings": "Email Settings",
+    "The DSN fully includes all parameters needed to connect to the mail service. You can learn more at %s. Here are a few examples of supported DSN syntaxes: %s": "The DSN fully includes all parameters needed to connect to the mail service. You can learn more at {0}. Here are a few examples of supported DSN syntaxes: {1}",
+    "Mail DSN": "Mail DSN",
+    "The e-mail address from which e-mails will be sent when the platform sends an e-mail, also used as 'reply-to' header. We recommend using a 'no-reply' e-mail address here, to avoid excessive filling of an e-mail box. The support e-mail address defined in the Platform section should be used to contact you, but replying to automatic notifications should not be encouraged.": "The e-mail address from which e-mails will be sent when the platform sends an e-mail, also used as 'reply-to' header. We recommend using a 'no-reply' e-mail address here, to avoid excessive filling of an e-mail box. The support e-mail address defined in the Platform section should be used to contact you, but replying to automatic notifications should not be encouraged.",
+    "Mail: 'From' address": "Mail: 'From' address",
+    "The name that appears as the sender (next to the From e-mail address) when the platform sends an e-mail.": "The name that appears as the sender (next to the From e-mail address) when the platform sends an e-mail.",
+    "Mail: 'From' name": "Mail: 'From' name",
+    "Installer data is missing.": "Installer data is missing.",
+    "Test email sent successfully": "Test email sent successfully",
+    "Test email failed: ": "Test email failed: ",
+    "Error during test email: ": "Error during test email: "
 }
