--- a/translations/messages.pot
+++ b/translations/messages.pot
@@ -28487,3 +28487,36 @@ msgstr ""
 
 msgid "User not found or invalid."
 msgstr ""
+
+msgid "Email Settings"
+msgstr ""
+
+msgid "The DSN fully includes all parameters needed to connect to the mail service. You can learn more at %s. Here are a few examples of supported DSN syntaxes: %s"
+msgstr ""
+
+msgid "Mail DSN"
+msgstr ""
+
+msgid "The e-mail address from which e-mails will be sent when the platform sends an e-mail, also used as 'reply-to' header. We recommend using a 'no-reply' e-mail address here, to avoid excessive filling of an e-mail box. The support e-mail address defined in the Platform section should be used to contact you, but replying to automatic notifications should not be encouraged."
+msgstr ""
+
+msgid "Mail: 'From' address"
+msgstr ""
+
+msgid "The name that appears as the sender (next to the From e-mail address) when the platform sends an e-mail."
+msgstr ""
+
+msgid "Mail: 'From' name"
+msgstr ""
+
+msgid "Installer data is missing."
+msgstr ""
+
+msgid "Test email sent successfully"
+msgstr ""
+
+msgid "Test email failed: "
+msgstr ""
+
+msgid "Error during test email: "
+msgstr ""
