Update translation related to mailer_dsn setting

--- a/translations/messages.en.po
+++ b/translations/messages.en.po
@@ -28523,8 +28523,8 @@ msgstr "User not found or invalid."
 msgid "Email Settings"
 msgstr "Email Settings"
 
-msgid "The DSN fully includes all parameters needed to connect to the mail service. You can learn more at %s. Here are a few examples of supported DSN syntaxes: %s"
-msgstr "The DSN fully includes all parameters needed to connect to the mail service. You can learn more at %s. Here are a few examples of supported DSN syntaxes: %s"
+msgid "The DSN fully includes all parameters needed to connect to the mail service. You can learn more at %s. The default value is null://null and will disable e-mail sending. Use native://default to use the default PHP configuration on your server. Here are a few examples of supported DSN syntaxes: %s."
+msgstr "The DSN fully includes all parameters needed to connect to the mail service. You can learn more at %s. The default value is null://null and will disable e-mail sending. Use native://default to use the default PHP configuration on your server. Here are a few examples of supported DSN syntaxes: %s."
 
 msgid "Mail DSN"
 msgstr "Mail DSN"
