--- a/translations/messages.pot
+++ b/translations/messages.pot
@@ -28491,7 +28491,7 @@ msgstr ""
 msgid "Email Settings"
 msgstr ""
 
-msgid "The DSN fully includes all parameters needed to connect to the mail service. You can learn more at %s. Here are a few examples of supported DSN syntaxes: %s"
+msgid "The DSN fully includes all parameters needed to connect to the mail service. You can learn more at %s. The default value is null://null and will disable e-mail sending. Use native://default to use the default PHP configuration on your server. Here are a few examples of supported DSN syntaxes: %s."
 msgstr ""
 
 msgid "Mail DSN"
