--- a/translations/messages.fr.po
+++ b/translations/messages.fr.po
@@ -14978,7 +14978,7 @@ msgid "Optional parameters"
 msgstr "Paramètres facultatifs"
 
 msgid "The database connection has failed. This is generally due to the wrong user, the wrong password or the wrong database prefix being set above. Please review these settings and try again."
-msgstr "La connexion à la base de données a échoué. Ceci est généralement dû à une mauvaise configuration de l'utilisateur, du mot de passe ou du préfixe de base de données indiqués ci-dessus. Veuillez les réviser attentivement et essayer à nouveau."
+msgstr "La connexion à la base de données a échoué. Ceci est généralement dû à une mauvaise configuration de l'utilisateur, du mot de passe ou du nom de base de données indiqués ci-dessus. Veuillez les réviser attentivement et essayer à nouveau."
 
 msgid "Upgrade from Chamilo 1.6.x"
 msgstr "Mettre à jour depuis Chamilo 1.6.x"
